--- a/google_maps_api_project/style.css
+++ b/google_maps_api_project/style.css
@@ -1,19 +1,26 @@
-body {
-    background-image: linear-gradient(180deg, #eee, #fff 100px, #fff);
-  }
-    
-  .container {
-    max-width: 960px;
-  }
-    
-  .pricing-header {
-    max-width: 700px;
-  }
-  
-  .footer{
-    position: fixed;
-    left: 0;
-    bottom: 0;
-    width: 100%;
+html{
+    box-sizing: border-box;
+    font-size: 100%;
+}
+body{
+    margin: 0;
+    padding: 0;
+    background-color: black;
+    color: white;
+}
+
+*, *::before, *::after{
+    box-sizing: inherit;
+}
+#map{
+    height: 60vh;
+}
+h1{
+    font-family: 'Press Start 2P', system-ui;
     text-align: center;
-  }
+    font-size: 2rem;
+    padding: 0 3rem;
+}
+.gm-style-iw-d{
+    color: black;
+}
