--- a/style.css
+++ b/style.css
@@ -2,18 +2,29 @@ body {
     background-image: linear-gradient(180deg, #eee, #fff 100px, #fff);
   }
     
-  .container {
+.container {
     max-width: 960px;
   }
     
-  .pricing-header {
+.pricing-header {
     max-width: 700px;
   }
   
-  .footer{
+.footer{
     position: fixed;
     left: 0;
     bottom: 0;
     width: 100%;
     text-align: center;
+  }
+
+.b-example-divider {
+    height: 3rem;
+    background-color: rgba(0, 0, 0, .1);
+    border: solid rgba(0, 0, 0, .15);
+    border-width: 1px 0;
+    box-shadow: inset 0 .5em 1.5em rgba(0, 0, 0, .1), inset 0 .125em .5em rgba(0, 0, 0, .15);
+  }
+@media (min-width: 992px) {
+    .rounded-lg-3 { border-radius: .3rem; }
   }
