--- a/style.css
+++ b/style.css
@@ -1,5 +1,9 @@
 body {
     background-image: linear-gradient(180deg, #eee, #fff 100px, #fff);
+    
+  }
+html, body {
+    height: 100%;
   }
     
 .container {
@@ -8,6 +12,10 @@ body {
     
 .pricing-header {
     max-width: 700px;
+  }
+
+.container {
+    flex: 1; /* Permette al contenuto di riempire lo spazio disponibile */
   }
   
 .footer{
