--- a/style.css
+++ b/style.css
@@ -1,22 +1,22 @@
+
+html,body{
+  height: 100%;
+}
+
 body {
-    background-image: linear-gradient(180deg, #eee, #fff 100px, #fff);
-    
-  }
-html, body {
-    height: 100%;
-  }
-    
+  display: flex;
+  flex-direction: column;
+}
+
 .container {
-    max-width: 960px;
-  }
+  flex: 1; /* Permette al contenuto di riempire lo spazio disponibile */
+  max-width: 960px;
+}
     
 .pricing-header {
     max-width: 700px;
   }
 
-.container {
-    flex: 1; /* Permette al contenuto di riempire lo spazio disponibile */
-  }
   
 .footer{
     position: fixed;
